# ImageOCR

./: .gitignore  CLAUDE.md  PRD.md  README.md  config.yaml  design-system.md  feature-ux.md  pyproject.toml  research-report.md  task.json
.claude/: settings.json  settings.local.json
.claude/plans/: tender-mapping-raven.md
artifacts/: ai_refine_suggestions.json  graph.json  l3_nodes.txt  mindmap.html  mindmap_outline.md  nodes.json  ocr_merged.json  ocr_raw.jsonl  tiles_manifest.json
artifacts/editors/: region_01_editor.html  region_02_editor.html
artifacts/preprocess/: manifest.json
artifacts/reports/: summary.json  summary.md
artifacts/review/: index.html  review_issues.csv  review_issues.json
baseline/GameEngine/: README.md  region_01.json  region_02.json  region_03.json  region_04.json  region_05.json  region_06.json  region_07.json  region_08.json
frontend/: BROWSER_COMPATIBILITY.md  README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
scripts/: add_suggestions_batch1.py  add_suggestions_batch2.py  add_suggestions_batch3.py  add_suggestions_batch4.py  apply_suggestions.py  fix_cycles.py  reorder_children.py  split_list_nodes.py
src/ocr_pipeline/: __init__.py  cli.py  config.py  editor.py  editor_api.py  editor_template.html  export.py  graph.py  io_utils.py  merge.py  models.py  (+7 more)
tests/: test_editor.py  test_editor_api.py  test_graph.py  test_merge.py  test_nodes.py  test_regression.py  test_review.py  test_tiling.py
tests_tmp/: test_build_baseline_editor_gencurrent
(+58 files in other folders)
